# llm-trans

./: .gitignore  README.md  pyproject.toml  settings.yaml
.github/workflows/: ci.yml
llm_trans/: app.py  cli.py  translator.py
llm_translate/: app.py  cli.py  translator.py
