[tool.poetry]
name = "llm-trans"
version = "0.2.1"
description = "Your personal Language Translator powered by LLMs."
authors = ["RussellLuo <luopeng.he@gmail.com>"]
packages = [
    { include = "llm_trans" }
]
include = [
    { path = "llm_trans/favicon.ico", format = ["sdist", "wheel"] }
]
readme = "README.md"
repository = "https://github.com/RussellLuo/llm-trans"

[tool.poetry.dependencies]
python = ">=3.10.0,<3.14"
coagent-python = "0.0.1"
gradio = "5.16.0"
pyyaml = "6.0.2"

[tool.poetry.scripts]
llm-trans= "llm_trans.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
